rename the project from Jasmine to Guinness

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,8 +1,8 @@
 name: example
 author: Victor Savkin <vic.savkin@gmail.com>
-homepage: https://github.com/vsavkin/jasminedart
+homepage: https://github.com/vsavkin/guinness
 dependencies:
-  jasmine:
+  guinness:
     path: ../
   browser: any
 environment:
