--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,5 +6,7 @@ description: A port of the Jasmine testing framework.
 dependencies:
   collection: ">=0.9.1 <2.0.0"
   unittest: ">= 0.10.0 <2.0.0"
+dev_dependencies:
+  dartmocks: ">= 0.5.1 <1.0.0"
 environment:
   sdk: ">=1.3.0 <2.0.0"
