--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "karma" : "~0.12.0",
     "karma-dart" : "~0.2.6",
     "karma-chrome-launcher": "~0.1.3",
-    "karma-junit-reporter": "~0.2.1"
+    "karma-phantomjs-launcher": "~0.1.3",
+    "karma-junit-reporter": "~0.2.1",
+    "karma-jasmine" : "~0.1.5"
   }
 }
