--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,5 +8,6 @@ dependencies:
   unittest: ">= 0.11.0 <0.12.0"
 dev_dependencies:
   dartmocks: ">= 0.5.2 <0.6.0"
+  browser: ">= 0.10.0 <1.0.0"
 environment:
   sdk: ">=1.3.0 <2.0.0"
